# graduacao-logica-super-trunfo

./: .gitignore  CMakeLists.txt  readme.md
include/: card.h  prompt.h
src/: card.c  main.c  prompt.c
